--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,8 +6,53 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
     </head>
+    <style>
+        html, body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+        }
+    </style>
     <body touch-action="auto">
+        <iframe src="" id="api-frame" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </body>
 
+    <script src="/js/OculusBridge.min.js"></script>
+    <script src="/js/sketchfab-viewer-1.0.0.js"></script>
+    <script>
+        var bridge = new OculusBridge({
+            "onOrientationUpdate" : function(quatValues) {
+            }
+        });
 
+        bridge.connect();
+
+        var iframe = document.getElementById( 'api-frame' );
+        var version = '1.0.0';
+        var urlid = 'a326be69d8e74f2c8309d846fc5ee398';
+        var client = new Sketchfab( version, iframe );
+
+        var error = function () {
+            console.error( 'Error api Sketchfab !' );
+        };
+
+        var success = function ( api ) {
+
+            api.start( function () {
+                $( '#start' ).click( function () {
+                    api.start();
+                } );
+
+                $( '#stop' ).click( function () {
+                    api.stop();
+                } );
+            } );
+
+        };
+
+        client.init( urlid, {
+            success: success
+        } );
+
+    </script>
 </html>
